[bugfix/layout] modify nav tab scrollbar

--- a/laravel/public/css/common.css
+++ b/laravel/public/css/common.css
@@ -34,7 +34,10 @@ body {
   overflow-x: scroll;
   width: 100%;
   display: -webkit-inline-box;
-  padding-bottom: 1.5%;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .tab-nav li {
